# local-plan-agent

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  skills-lock.json
.claude/: BUGS.md  settings.local.json
apps/web/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
data/migrations/: 001_init.sql  002_collaboration.sql  003_user_profiles.sql
data/mock/: activities.json  execution_status.json  pois.json  restaurants.json  routes.json
docs/api/: plans.md
docs/architecture/: scaffold.md  workflow.md
docs/product/: mvp-scope.md
infra/docker/: api.Dockerfile  web.Dockerfile
services/: agent_cli.py  test_agent_run.py
services/agent/nodes/: __init__.py  base.py  execution_node.py  feedback_node.py  intent_parser.py  planning_node.py  profile_node.py  (+2 more)
services/api/: pyproject.toml
services/api/app/: main.py
services/api/app/core/: config.py  llm.py
services/api/app/db/: __init__.py
services/api/app/repositories/: __init__.py  mock_poi_repository.py  user_profile_repository.py
services/api/app/routes/: city_guide.py  collaboration.py  inspirations.py  journals.py  plans.py  ws.py
services/api/app/schemas/: __init__.py  city_guide.py  collaboration.py  inspirations.py  journals.py  planning.py
services/api/app/services/: __init__.py  activity_workflow.py  city_guide.py  collaboration.py  inspirations.py  journals.py
services/domain/: README.md
services/llm/: __init__.py  base.py  config.py  factory.py  structured_output.py
services/tools/: README.md
(+91 files in other folders)
