[project]
name = "local-plan-agent-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.0"
]

[tool.setuptools.packages.find]
where = ["../../"]
include = ["services*"]
